<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PF SOSU</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_calender">CalenderActivity</string>
    <string name="title_activity_fun">FunActivity</string>

    <!-- Button text -->
    <string name="home">Home</string>
    <string name="calender">Calender</string>
    <string name="fun">Fun</string>
    <string name="go">Go</string>
    <string name="show_comment">Vis kommentar</string>
    <string name="write_comment">Skriv kommentar</string>
    <string name="signup">Tilmeld</string>
    <string name="signup_maybe">Måske</string>

    <!-- Reklame - næste arrangement -->
    <string name="next_event">Næste arrangement</string>
    <string name="next_event_title">Vin smagning</string>
    <string name="next_event_date">3. juni kl. 15:00</string>
    <string name="next_event_7_tilmeldte">7 tilmeldte</string>
    <string name="next_event_tilmeld">Tilmeld dig nu</string>
    <string name="title_activity_write">WriteActivity</string>
    <string name="title_activity_event">EventActivity</string>

</resources>