<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="2dp"
    android:paddingLeft="2dp"
    android:paddingRight="2dp"
    android:paddingTop="2dp"
    android:background="#808000"
    tools:context=".MainActivity" >

   <LinearLayout
        android:id="@+id/main_ikons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/main_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/home"
            android:textColor="#800080" />

        <Button
            android:id="@+id/main_calender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="gotoCalender"
            android:text="@string/calender"
            android:textColor="#800080" />

        <Button
            android:id="@+id/main_fun"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="gotoFun"
            android:text="@string/fun"
            android:textColor="#800080" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#000000" />

    <fragment
        android:id="@+id/main_fragment"
        android:name="dani.leahele.EkspSysApp.HomeFragment"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

</LinearLayout>